Add CI test on e_branch when push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Java Ant CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, "e_branch" ]
   pull_request:
     branches: [ master ]
 
